@@ -5,9 +5,9 @@ import weakref
 
 import numpy as np
 
-from pyfits.column import ASCIITNULL, FITS2NUMPY, TDIM_RE, Column, ColDefs, \
-                          _FormatX, _FormatP, _VLF, _get_index, _wrapx, \
-                          _unwrapx, _convert_format, _convert_ascii_format
+from pyfits.column import (ASCIITNULL, FITS2NUMPY, Column, ColDefs, _FormatX,
+                           _FormatP, _VLF, _get_index, _wrapx, _unwrapx,
+                            _convert_ascii_format)
 from pyfits.util import _array_from_file, decode_ascii, lazyproperty
 
 
@@ -444,7 +444,7 @@ class FITS_rec(np.recarray):
                         actual_nitems = dummy.itemsize
                     else:
                         actual_nitems = dummy.shape[1]
-                    if nitems != actual_nitems:
+                    if nitems > actual_nitems:
                         warnings.warn(
                         'TDIM%d value %s does not fit with the size of '
                             'the array items (%d).  TDIM%d will be ignored.'
@@ -471,8 +471,9 @@ class FITS_rec(np.recarray):
                     pass
 
             if dim:
+                nitems = reduce(operator.mul, dim)
                 if self._convert[indx] is None:
-                    self._convert[indx] = dummy
+                    self._convert[indx] = dummy[:,:nitems]
                 if _str:
                     fmt = self._convert[indx].dtype.char
                     dtype = ('|%s%d' % (fmt, dim[-1]), dim[:-1])
@@ -518,15 +519,8 @@ class FITS_rec(np.recarray):
             bscale = 1
         if not _zero:
             bzero = 0
-        dim = self._coldefs.dims[indx]
-        m = dim and TDIM_RE.match(dim)
-        if m:
-            dim = m.group('dims')
-            dim = tuple(int(d.strip()) for d in dim.split(','))[::-1]
-        else:
-            # Ignore any dim values that don't specify a multidimensional
-            # column
-            dim = ''
+
+        dim = self._coldefs._dims[indx]
 
         return (_str, _bool, _number, _scale, _zero, bscale, bzero, dim)
 
